k8s-manifests/kanban-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
  labels:
    app: kanban
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban
  template:
    metadata:
      labels:
        app: kanban
    spec:
      containers:
        - name: kanban
          image: hanadisa/my-kanban-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
