k8s-manifests/kanban-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kanban-app
  labels:
    app: kanban
spec:
  selector:
    app: kanban
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
