k8s-manifests/kanban-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kanban.203.0.113.10.nip.io
      secretName: kanban-tls
  rules:
    - host: kanban.203.0.113.10.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kanban-app
                port:
                  number: 80
